# CineBot-NLP-Project

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: default.yaml
movie-entertainment-chatbot/: .env.example  README.md  package.json
movie-entertainment-chatbot/configs/: default.yaml  routes.yaml
movie-entertainment-chatbot/scripts/: build-index.ts  seed.ts
movie-entertainment-chatbot/src/: app.ts
movie-entertainment-chatbot/src/api/: server.ts
movie-entertainment-chatbot/src/config/: default.ts  env.ts
movie-entertainment-chatbot/src/dialogue/: context.ts  state.ts
movie-entertainment-chatbot/src/emotion/: emotionDetector.ts  sentiment.ts
movie-entertainment-chatbot/src/integrations/: embeddings.ts  llm.ts  recommenderAPI.ts  tmdb.ts
movie-entertainment-chatbot/tests/: api.test.ts  nlp.test.ts  recommender.test.ts
scripts/: build_index.py
src/: app.py  conversation.py  intent_router.py  main.py  response_generator.py
src/analytics/: metrics.py
src/dialogue/: memory.py
src/evaluation/: metrics.py
src/features/: __init__.py  vectorization.py
src/frontend/: streamlit_app.py
src/integrations/: tmdb.py
src/models/: model.py
src/nlp/: entity_linker.py  entity_recognizer.py  intent_classifier.py  pipeline.py  sentiment.py
src/preprocessing/: __init__.py  text_cleaning.py
src/rag/: build_index.py  vector_retriever.py
src/services/: tmdb.py
src/store/: memory.py
src/training/: train.py
tests/: test_api.py  test_pipeline.py
(+22 files in other folders)
