[tool.poetry]
name = "nlp-project"
version = "0.1.0"
description = "A Natural Language Processing project for text analysis and modeling."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
scikit-learn = "^0.24"
nltk = "^3.6"
torch = "^1.9"
transformers = "^4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# UP007: Keep Optional for py39 compatibility
# UP006/UP035: Keep List/Dict for Pydantic v1 compatibility
ignore = ["UP007", "UP006", "UP035"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"